# sensei-cli

./: .gitignore  README.md  pyproject.toml
sensei/: api.py
